--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="header">
+      <div class="container-left">
       <div class="logo">
         LOGO
       </div>
@@ -17,10 +18,15 @@
         <li><a href="google.com">link-two</a></li>
         <li><a href="google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
-        1 new notification
-      </button>
+    </div>
+    <div class="container-right">
+      <div class="button-right">
+        <button class="notifications">
+          1 new notification
+        </button>
+      </div>
       <div class="profile-image"></div>
+    </div>
     </div>
   </body>
 </html>
